# luna

./: .gitignore  .gitmodules  .mozconfig  .ycm_extra_conf.py  AUTHORS  CLOBBER  LICENSE  Makefile.in  README.md  README.txt  SECURITY.md  aclocal.m4  client.mk  configure.in  mach  moz.build  moz.configure  old-configure.in
browser/: LICENSE  Makefile.in  app.mozbuild  build.mk  configure.in  confvars.sh  moz.build
browser/app/: Makefile.in  blocklist.xml  firefox.exe.manifest  moz.build  nsBrowserApp.cpp  palemoon.exe.manifest
browser/app/profile/: firefox.js  palemoon.js
browser/base/: jar.mn
browser/base/content/: aboutDialog.css  aboutDialog.js  aboutDialog.xul  browser-addons.js  browser-appmenu.inc  browser-context.inc  browser-fullScreen.js  browser-media.js  browser-menubar.inc  browser-places.js  browser-plugins.js  browser-sets.inc  browser-syncui.js  browser-title.css  browser.css  browser.js  browser.xul  nsContextMenu.js  padlock.css  padlock.js  popup-notifications.inc  promises.js  tabbrowser.xml  urlbarBindings.xml  utilityOverlay.js
browser/components/: BrowserComponents.manifest  moz.build  nsAboutRedirector.js  nsBrowserContentHandler.js  nsBrowserGlue.js
browser/config/: version.txt
browser/installer/: Makefile.in  package-manifest.in  package-manifest.in.org  removed-files.in
browser/locales/: Makefile.in  filter.py  jar.mn  l10n.ini
browser/metro/: metroapp.ini.in
browser/modules/: AboutHomeUtils.jsm  Makefile.in  Windows8WindowFrameColor.jsm  WindowsPreviewPerTab.jsm  moz.build
browser/themes/: install.rdf  moz.build
(+3996 files in other folders)
